worked on about-us and why-us

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -272,3 +272,14 @@ ul.CTAs a {
   margin-bottom: 5px;
 }
 
+/* #about-message{
+  padding-top: 5px;
+  font-size:5px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#about-us{
+  text-decoration: none;
+  color:white;
+  padding-left: 10px;
+} */
